Se actualiza openapi, se crea servicio de prueba para crear menu movil
